tests/expected/err-notlocal.uc.out
/home/krikava/Teaching/FIT/NI-APR/2022/microc/tests/../examples/err-notlocal.uc:[8:5]: error: identifier 'n' not declared
      n=10; // error: identifier not declared
      ^

1
